--- a/style.css
+++ b/style.css
@@ -436,3 +436,57 @@ nav .navbar-white .fa-bars {
 .sidebar-link a {
   text-decoration: none;
 }
+.pagination {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 40px 0;
+}
+.pagination img {
+  width: 15px;
+  margin: 10px 20px;
+}
+.right-arro {
+  transform: rotate(180deg);
+}
+.pagination span {
+  margin: 10px 8px;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.pagination .current {
+  background: #333;
+  color: #fff;
+}
+
+@media only screen and (max-width: 700px) {
+  .list-container {
+    margin-top: 150px;
+  }
+  .left-col,
+  .right-col,
+  .house-img,
+  .house-info {
+    flex-basis: 100%;
+  }
+  .left-col h1 {
+    font-size: 22px;
+  }
+  .house-info h3 {
+    font-size: 18px;
+  }
+  .house-info i {
+    font-size: 16px;
+  }
+  .pagination span {
+    margin: 10px 2px;
+    width: 30px;
+    height: 30px;
+    line-height: 30px;
+    font-size: 12px;
+  }
+}
